Footer note made more discriptive and reletivley custom to website

--- a/my webpage/comment.html
+++ b/my webpage/comment.html
@@ -42,7 +42,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2023 Your Website</p>
+      <p>&copy; Taajoedeen Daniels since 2003</p>
     </footer>
 
     <script src="script.js"></script>
