--- a/my webpage/contact.html
+++ b/my webpage/contact.html
@@ -48,7 +48,7 @@
       </section>
     </main>
     <footer>
-      <p>&copy; 2023 Your Website</p>
+      <p>&copy; Taajoedeen Daniels since 2003</p>
     </footer>
     <script src="script.js"></script>
     <script src="like.js"></script>
