--- a/my webpage/index.html
+++ b/my webpage/index.html
@@ -158,7 +158,7 @@
     <button class="save-button" data-item-name="Disney Quotes">Save</button>
     <button class="like-button" data-item-name="Item Name">Like</button>
     <footer>
-      <p>&copy; 2023 Your Website</p>
+      <p>&copy;Taajoedeen Daniels since 2003</p>
     </footer>
     <script src="script.js"></script>
     <script src="like.js"></script>
