--- a/my webpage/about.html
+++ b/my webpage/about.html
@@ -110,7 +110,7 @@
     <button class="like-button" data-item-name="Item Name">Like</button>
 
     <footer>
-      <p>&copy; 2023 Your Website</p>
+      <p>&copy;Taajoedeen Daniels since 2003</p>
     </footer>
     <script src="script.js"></script>
     <script src="like.js"></script>
