#4 ISSUE RESOLVED CODE FIXED

--- a/my webpage/HTML/contact.html
+++ b/my webpage/HTML/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/L2T06/gitTask1/my webpage/CSS/styles.css" />
     <title>Contact</title>
   </head>
   <body>
@@ -11,18 +11,29 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="saved-items.html">Saved</a></li>
-        <li><a href="comment.html">Comment</a></li>
+        <li><a href="/L2T06/gitTask1/my webpage/HTML/index.html">Home</a></li>
+        <li>
+          <a href="/L2T06/gitTask1/my webpage/HTML/about.html">About Me</a>
+        </li>
+        <li>
+          <a href="/L2T06/gitTask1/my webpage/HTML/contact.html">Contact</a>
+        </li>
+        <li>
+          <a href="/L2T06/gitTask1/my webpage/HTML/saved-items.html">Saved</a>
+        </li>
+        <li>
+          <a href="/L2T06/gitTask1/my webpage/HTML/comment.html">Comments</a>
+        </li>
       </ul>
     </nav>
 
     <main>
       <section>
         <h2>Contact Information</h2>
-        <img src="contact.jpg" alt="Image 1" />
+        <img
+          src="/L2T06/gitTask1/my webpage/IMAGES/contact.jpg"
+          alt="Image 1"
+        />
         <p>You can reach me at:</p>
         <ul>
           <li>
@@ -48,10 +59,10 @@
       </section>
     </main>
     <footer>
-      <p>&copy; 2023 Your Website</p>
+      <p>&copy; Taajoedeen Daniels since 2003</p>
     </footer>
-    <script src="script.js"></script>
-    <script src="like.js"></script>
-    <script src="comment.js"></script>
+    <script src="/L2T06/gitTask1/my webpage/JAVASCRIPT/script.js"></script>
+    <script src="/L2T06/gitTask1/my webpage/JAVASCRIPT/like.js"></script>
+    <script src="/L2T06/gitTask1/my webpage/JAVASCRIPT/comment.js"></script>
   </body>
 </html>
