--- a/my webpage/HTML/index.html
+++ b/my webpage/HTML/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/L2T06/gitTask1/my webpage/CSS/styles.css" />
     <title>Your Website</title>
   </head>
   <body>
@@ -11,11 +11,19 @@
     <img src="initials.jpg" alt="Image 0" />
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="saved-items.html">Saved</a></li>
-        <li><a href="comment.html">Comments</a></li>
+        <li><a href="/L2T06/gitTask1/my webpage/HTML/index.html">Home</a></li>
+        <li>
+          <a href="/L2T06/gitTask1/my webpage/HTML/about.html">About Me</a>
+        </li>
+        <li>
+          <a href="/L2T06/gitTask1/my webpage/HTML/contact.html">Contact</a>
+        </li>
+        <li>
+          <a href="/L2T06/gitTask1/my webpage/HTML/saved-items.html">Saved</a>
+        </li>
+        <li>
+          <a href="/L2T06/gitTask1/my webpage/HTML/comment.html">Comments</a>
+        </li>
       </ul>
     </nav>
 
@@ -52,7 +60,10 @@
       <button class="like-button" data-item-name="Item Name">Like</button>
       <section>
         <h2>Hobbies</h2>
-        <img src="hobbies.jpg" alt="Image 1" />
+        <img
+          src="/L2T06/gitTask1/my webpage/IMAGES/hobbies.jpg"
+          alt="Image 1"
+        />
         <ul>
           <li>
             gym - In the gym, I am on a journey of self-improvement that extends
@@ -150,7 +161,7 @@
     <aside>
       <h2>Quotes</h2>
       <blockquote>
-        <img src="disney.jpg" alt="Image 2" />
+        <img src="/L2T06/gitTask1/my webpage/IMAGES/disney.jpg" alt="Image 2" />
         <p>“The best way to get started is to quit talking and begin doing.”</p>
         <cite> — Walt Disney</cite>
       </blockquote>
@@ -158,10 +169,10 @@
     <button class="save-button" data-item-name="Disney Quotes">Save</button>
     <button class="like-button" data-item-name="Item Name">Like</button>
     <footer>
-      <p>&copy; 2023 Your Website</p>
+      <p>&copy;Taajoedeen Daniels since 2003</p>
     </footer>
-    <script src="script.js"></script>
-    <script src="like.js"></script>
-    <script src="comment.js"></script>
+    <script src="/L2T06/gitTask1/my webpage/JAVASCRIPT/script.js"></script>
+    <script src="/L2T06/gitTask1/my webpage/JAVASCRIPT/like.js"></script>
+    <script src="/L2T06/gitTask1/my webpage/JAVASCRIPT/comment.js"></script>
   </body>
 </html>
