--- a/my webpage/HTML/comment.html
+++ b/my webpage/HTML/comment.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/L2T06/gitTask1/my webpage/CSS/styles.css" />
     <title>Comments</title>
   </head>
   <body>
@@ -11,12 +11,19 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="saved-items.html">Saved</a></li>
-        <li><a href="comment.html">Comments</a></li>
-      </ul>
+        <li><a href="/L2T06/gitTask1/my webpage/HTML/index.html">Home</a></li>
+        <li>
+          <a href="/L2T06/gitTask1/my webpage/HTML/about.html">About Me</a>
+        </li>
+        <li>
+          <a href="/L2T06/gitTask1/my webpage/HTML/contact.html">Contact</a>
+        </li>
+        <li>
+          <a href="/L2T06/gitTask1/my webpage/HTML/saved-items.html">Saved</a>
+        </li>
+        <li>
+          <a href="/L2T06/gitTask1/my webpage/HTML/comment.html">Comments</a>
+        </li>
     </nav>
 
     <main>
@@ -42,10 +49,11 @@
     </main>
 
     <footer>
-      <p>&copy; 2023 Your Website</p>
+      <p>&copy; Taajoedeen Daniels since 2003</p>
     </footer>
 
-    <script src="script.js"></script>
-    <script src="comment.js"></script>
+    <script src="/L2T06/gitTask1/my webpage/JAVASCRIPT/script.js"></script>
+    <script src="/L2T06/gitTask1/my webpage/JAVASCRIPT/like.js"></script>
+    <script src="/L2T06/gitTask1/my webpage/JAVASCRIPT/comment.js"></script>
   </body>
 </html>
